--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test": "prettier --check . && eslint . && stylelint \"**/*.css\""
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.0.1",
     "@types/inquirer": "^7.3.1",
     "@types/node": "^15.0.2",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "crypto-js": "^4.0.0",
     "eslint": "^7.25.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^6.0.0",
