--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "cli:dev": "ts-node --project tsconfig.server.json src/cli",
     "server:dev": "tsnd --project tsconfig.server.json src/server",
     "server:build": "tsc --project tsconfig.server.json",
-    "client:build": "tsc && vite build",
+    "client:build": "vite build",
     "build": "npm run client:build && npm run server:build",
     "serve": "vite preview",
     "prepare": "husky install",
-    "test": "prettier --check . && eslint . && stylelint \"**/*.css\""
+    "test": "tsc && prettier --check . && eslint . && stylelint \"**/*.css\""
   },
   "devDependencies": {
     "@types/crypto-js": "^4.0.1",
